src/test/resources/sem/bad/prog10.ilang
routine main() is
  var a is 1.length
end
